syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";

service UserService {
  rpc SignIn(SignInRequest) returns (SignInResponse) {
    option (google.api.http) = {
      post: "/user/v1/sign-in"
      body: "*"
    };
  }
}

message SignInRequest {
  string id = 1;
  string password = 2;
}

message SignInResponse {}
